We kinda need this too.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
 	
 	<meta charset="utf-8">
 	
-	<title>Friday Night Funkin': Doki Doki Takeover!</title>
+	<title>Doki Doki Takeover! - Plus Update</title>
 	
-	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<link rel="canonical" href="https://www.snokido.com/game/vs-monika" />
+	<link rel="canonical" href="https://game3.glov3.me/uploads/game/html5/24822/">
 	
 	<link rel="shortcut icon" type="image/png" href="./favicon.png">
 	
 	
-	<script type="text/javascript" src="./monika.js"></script>
+	<script type="text/javascript" src="./DokiTakeover.js?080124"></script>
 	
 	<script>
 		window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, { capture: false, passive: false });
@@ -21,7 +19,7 @@
 			var meta = document.getElementById ("viewport");
 			meta.setAttribute ('content', 'width=device-width, initial-scale=' + (2 / window.devicePixelRatio) + ', user-scalable=no');
 		}
-		window.addEventListener("keydown", function(e) {if(["Tab","Space","ArrowUp","ArrowDown","ArrowLeft","ArrowRight"].indexOf(e.code) > -1) {e.preventDefault(); }}, false);
+		window.addEventListener("keydown", function (e) { if (["Tab", "Space", "ArrowUp", "ArrowDown", "ArrowLeft", "ArrowRight"].indexOf(e.code) > -1) { e.preventDefault(); } }, false);
 	</script>
 	
 	<style>
@@ -142,4 +140,36 @@
 
 	</style>
 	
-</html>
+<style>#inspect-element-top-layer * { all: unset; }</style><style>
+      body.shimeji-pinned iframe {
+        pointer-events: none;
+      }
+      body.shimeji-select-ie {
+        cursor: cell !important;
+      }
+      #shimeji-contextMenu::-webkit-scrollbar {
+        width: 6px;
+      }
+      #shimeji-contextMenu::-webkit-scrollbar-thumb {
+        background-color: rgba(30,30,30,0.6);
+        border-radius: 3px;
+      }
+      #shimeji-contextMenu::-webkit-scrollbar-thumb:hover {
+        background: #555;
+      }
+    </style><meta name="shimejiBrowserExtensionId" content="gohjpllcolmccldfdggmamodembldgpc" data-version="2.0.5"></head>
+<body>
+	
+	<noscript>This webpage makes extensive use of JavaScript. Please enable JavaScript in your web browser to view this page.</noscript>
+	
+	<div id="openfl-content" style="cursor: none;"><canvas width="1280" height="720" style="transform: translateZ(0px); width: 754px; height: 424px; margin-left: 0px; margin-top: 92px;"></canvas></div>
+	
+	<script type="text/javascript">
+		lime.embed ("DokiTakeover", "openfl-content", 1280, 720, { parameters: {} });
+	</script>
+	
+	<!-- You can find the sources of the game on the website gamebanana.com -->
+	
+
+
+<deepl-input-controller></deepl-input-controller><div id="inspect-element-top-layer" popover="auto" data-inspect-element="inspectElement" style="pointer-events: none; border: unset; padding: 0px;"></div><div id="shimeji-workArea" style="position: fixed; background: transparent; z-index: 2147483643; width: 100vw; height: 100vh; left: 0px; top: 0px; transform: translate(0px, 0px); pointer-events: none;"></div></body></html>
