FUCK, WRONG .js FILE!

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="shortcut icon" type="image/png" href="./favicon.png">
 	
 	
-	<script type="text/javascript" src="./DokiTakeover.js?080124"></script>
+	<script type="text/javascript" src="./monika.js></script>
 	
 	<script>
 		window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, { capture: false, passive: false });
