--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 	<link rel="canonical" href="https://game3.glov3.me/uploads/game/html5/24822/">
 	
 	<link rel="shortcut icon" type="image/png" href="./favicon.png">
-	
+
+	<script>
+        window.onbeforeunload = function() {
+            return "Are you sure you want to reload?";
+        };
+    </script>
 	
 	<script type="text/javascript" src="./monika.js></script>
 	
